# rustycog

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  sonar-project.properties
.github/workflows/: ci.yml  publish-crates-manual.yml
obsidian/RustyCog/.obsidian/: app.json  graph.json
obsidian/RustyCog/concepts/: anonymous-public-read-via-wildcard-subject.md  centralized-authorization-service.md  command-registry-and-retry-policies.md  event-driven-microservice-platform.md  integration-testing-with-real-infrastructure.md  openfga-as-authorization-engine.md  resource-scoped-permission-fetchers.md  shared-rust-microservice-sdk.md  structured-service-configuration.md  test-only-cargo-feature-relaxation.md  zanzibar-relation-tuples.md
obsidian/RustyCog/entities/: command-context.md  command-registry.md  communication.md  db-connection-pool.md  domain-error.md  domain-event.md  event-publisher.md  health-checker.md  index.md  membership.md  organization.md  permission-checker.md  permissions-fetcher.md  project.md  queue-config.md  relation-tuple.md  resource-id.md  resource-ref.md  route-builder.md  service-error.md  subject.md  user.md
obsidian/RustyCog/projects/aiforall/: aiforall.md  roadmap.md
obsidian/RustyCog/projects/aiforall/references/: modular-monolith-runtime.md
obsidian/RustyCog/projects/aiforall/skills/: running-aiforall-runtime-modes.md
obsidian/RustyCog/projects/hive/: hive.md
obsidian/RustyCog/projects/hive-events/: hive-events.md
obsidian/RustyCog/projects/hive/concepts/: external-provider-sync-jobs.md  index.md  invitation-driven-membership.md  organization-resource-authorization.md
obsidian/RustyCog/projects/hive/references/: hive-command-execution.md  hive-data-model-and-schema.md  hive-entity-model.md  hive-http-api-and-openapi-drift.md  hive-runtime-and-configuration.md  hive-service.md  hive-testing-and-api-fixtures.md  index.md
obsidian/RustyCog/projects/hive/skills/: building-organization-management-services.md  index.md
obsidian/RustyCog/projects/iamrusty/: iamrusty.md
obsidian/RustyCog/projects/iamrusty/concepts/: hexagonal-architecture.md  index.md  jwt-algorithm-enforcement-and-test-relaxation.md  jwt-secret-storage-abstraction.md  oauth-provider-linking.md  oauth-state-and-csrf-protection.md
obsidian/RustyCog/projects/iamrusty/references/: iamrusty-api-and-auth-flows.md  iamrusty-command-execution.md  iamrusty-entity-model.md  iamrusty-runtime-and-security.md  iamrusty-service.md  iamrusty-testing-and-fixtures.md  index.md
obsidian/RustyCog/projects/iamrusty/skills/: extending-iamrusty-with-oauth-providers.md  index.md  testing-rust-services-with-fixtures.md
obsidian/RustyCog/projects/manifesto/: manifesto.md
obsidian/RustyCog/projects/manifesto/concepts/: component-based-project-orchestration.md  component-catalog-and-fallback-adapter.md  component-instance-permissions.md  index.md  project-ownership-and-publication-lifecycle.md
obsidian/RustyCog/projects/manifesto/references/: index.md  manifesto-api-and-permission-flows.md  manifesto-entity-model.md  manifesto-event-model.md  manifesto-runtime-and-configuration.md  manifesto-service.md  manifesto-testing-and-fixtures.md
obsidian/RustyCog/projects/manifesto/skills/: extending-manifesto-project-service.md  index.md
obsidian/RustyCog/projects/rustycog/: rustycog.md
obsidian/RustyCog/projects/rustycog/references/: index.md  openfga-mock-service.md  openfga-real-testcontainer-fixture.md  rustycog-command.md  rustycog-config.md  rustycog-core.md  rustycog-db.md  rustycog-events.md  rustycog-http.md  rustycog-logger.md  rustycog-meta.md  rustycog-outbox.md  rustycog-permission.md  rustycog-server.md  rustycog-testing.md  wiremock-mock-server-fixture.md
obsidian/RustyCog/projects/sentinel-sync/: sentinel-sync.md
obsidian/RustyCog/projects/sentinel-sync/references/: event-to-tuple-mapping.md  openfga-model.md  sentinel-sync-worker.md
obsidian/RustyCog/projects/sentinel-sync/skills/: extending-sentinel-sync-with-new-events.md
obsidian/RustyCog/projects/telegraph/: telegraph.md
obsidian/RustyCog/projects/telegraph/concepts/: index.md  (+3 more)
obsidian/RustyCog/references/: aiforall-platform.md  platform-building-blocks.md  rustycog-service-construction.md
obsidian/RustyCog/skills/: building-rustycog-services.md  creating-testcontainer-fixtures.md  stubbing-http-with-wiremock.md  using-rustycog-command.md  using-rustycog-config.md  using-rustycog-core.md  using-rustycog-db.md  using-rustycog-events.md  using-rustycog-http.md  using-rustycog-logger.md  using-rustycog-permission.md  using-rustycog-testing.md
rustycog-command/: Cargo.toml
rustycog-command/src/: generic_service.rs  lib.rs  registry.rs  token.rs
rustycog-config/: Cargo.toml
rustycog-config/src/: lib.rs
rustycog-core/: Cargo.toml
rustycog-core/src/: error.rs
rustycog-db/: Cargo.toml
rustycog-db/src/: lib.rs
rustycog-events/: Cargo.toml
rustycog-events/src/: adapter.rs  event.rs  kafka.rs  lib.rs  no_op.rs  sqs.rs
rustycog-http/: Cargo.toml
rustycog-http/src/: builder.rs  error.rs  extractors.rs  jwt.rs  jwt_handler.rs  lib.rs  middleware_auth.rs  middleware_permission.rs  tracing_middleware.rs
rustycog-http/tests/: permission_middleware_tests.rs
rustycog-logger/: Cargo.toml
rustycog-logger/src/: lib.rs
rustycog-outbox/: Cargo.toml
rustycog-outbox/src/: dispatcher.rs  entity.rs  lib.rs  migration.rs  recorder.rs  stored_event.rs
rustycog-permission/: Cargo.toml
rustycog-permission/src/: checker.rs  lib.rs
rustycog-server/: Cargo.toml
rustycog-server/src/: health.rs  lib.rs
rustycog-testing/: Cargo.toml
rustycog-testing/src/: lib.rs
rustycog-testing/src/common/: database.rs  db_utils.rs  http_test.rs  kafka_testcontainer.rs  mock_event_publisher.rs  mod.rs  openfga_testcontainer.rs  service_test_descriptor.rs  sqs_testcontainer.rs  test_server.rs
rustycog-testing/src/db/: common.rs
rustycog-testing/src/events/: mod.rs
rustycog-testing/src/http/: jwt.rs  mod.rs
rustycog-testing/src/permission/: mod.rs
rustycog-testing/src/wiremock/: mod.rs
src/: lib.rs
(+9 files in other folders)
