[package]
name = "rustycog-framework"
version = "0.1.0"
edition = "2026"
authors = ["Djoe Denne <djoe.denne@gmail.com>"]
description = "Feature-gated RustyCog framework crate"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Djoe-Denne/rustycog"
homepage = "https://github.com/Djoe-Denne/rustycog"
documentation = "https://github.com/Djoe-Denne/rustycog#readme"
keywords = ["rustycog", "microservices", "sdk", "ddd", "hexagonal"]
categories = ["development-tools", "asynchronous"]
rust-version = "1.84"
include = [
    "Cargo.toml",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/**",
    "rustycog-command/src/**",
    "rustycog-config/src/**",
    "rustycog-core/src/**",
    "rustycog-db/src/**",
    "rustycog-events/src/**",
    "rustycog-http/src/**",
    "rustycog-logger/src/**",
    "rustycog-outbox/src/**",
    "rustycog-permission/src/**",
    "rustycog-server/src/**",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["core", "config"]

core = [
    "dep:anyhow",
    "dep:async-trait",
    "dep:chrono",
    "dep:serde",
    "dep:thiserror",
    "dep:uuid",
]
config = [
    "dep:config",
    "dep:dotenvy",
    "dep:serde",
    "dep:toml",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:url",
]
command = [
    "core",
    "config",
    "dep:async-trait",
    "dep:inventory",
    "dep:serde",
    "dep:thiserror",
    "dep:tokio",
    "dep:tracing",
    "dep:uuid",
]
db = [
    "core",
    "config",
    "dep:async-trait",
    "dep:sea-orm",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:uuid",
]
events = [
    "core",
    "config",
    "dep:async-trait",
    "dep:aws-config",
    "dep:aws-credential-types",
    "dep:aws-sdk-sqs",
    "dep:chrono",
    "dep:futures",
    "dep:rdkafka",
    "dep:rustls",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "dep:tracing",
    "dep:uuid",
]
http = [
    "core",
    "command",
    "config",
    "permission",
    "dep:anyhow",
    "dep:async-trait",
    "dep:axum",
    "dep:axum-server",
    "dep:axum-valid",
    "dep:base64",
    "dep:chrono",
    "dep:jsonwebtoken",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:thiserror",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:uuid",
    "dep:validator",
]
logger = [
    "core",
    "config",
    "dep:anyhow",
    "dep:async-trait",
    "dep:chrono",
    "dep:serde",
    "dep:thiserror",
    "dep:tokio",
    "dep:tracing",
    "dep:tracing-appender",
    "dep:tracing-subscriber",
    "dep:uuid",
]
outbox = [
    "core",
    "db",
    "events",
    "dep:async-trait",
    "dep:chrono",
    "dep:sea-orm",
    "dep:sea-orm-migration",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "dep:tracing",
    "dep:uuid",
]
permission = [
    "core",
    "config",
    "dep:async-trait",
    "dep:moka",
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
    "dep:tracing",
    "dep:uuid",
]
server = ["core", "dep:anyhow", "dep:tokio", "dep:tracing"]
test-utils = ["events"]
scaleway-loki = ["logger", "dep:tracing-loki"]
full = [
    "command",
    "db",
    "events",
    "http",
    "logger",
    "outbox",
    "permission",
    "server",
]

[dependencies]
anyhow = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
aws-config = { version = "1", optional = true }
aws-credential-types = { version = "1", optional = true }
aws-sdk-sqs = { version = "1", optional = true }
axum = { version = "0.8", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
axum-valid = { version = "0.23", features = ["validator", "422", "into_json"], optional = true }
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
config = { version = "0.15", optional = true }
dotenvy = { version = "0.15", optional = true }
futures = { version = "0.3", optional = true }
inventory = { version = "0.3", optional = true }
jsonwebtoken = { version = "9", optional = true }
moka = { version = "0.12", features = ["future"], optional = true }
rdkafka = { version = "0.37", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
rustls = { version = "0.23", features = ["aws_lc_rs"], optional = true }
sea-orm = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"], optional = true }
sea-orm-migration = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
thiserror = { version = "2", optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"], optional = true }
toml = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["catch-panic", "propagate-header"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing-loki = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
url = { version = "2.5", optional = true }
uuid = { version = "1", features = ["serde", "v4"], optional = true }
validator = { version = "0.20", features = ["derive"], optional = true }

[dev-dependencies]
claims = "0.8"
mockall = "0.13"
rstest = "0.25"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-test = "0.4"
