[package]
name = "rustycog-command"
version.workspace = true
edition.workspace = true
description = "Generic command pattern implementation for RustyCog"
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
rustycog-core = { version = "0.1.0", path = "../rustycog-core" }
rustycog-config = { version = "0.1.0", path = "../rustycog-config" }
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
inventory.workspace = true
uuid.workspace = true
serde.workspace = true
thiserror.workspace = true