[package]
name = "rustycog-config"
version.workspace = true
edition.workspace = true
description = "Configuration management for RustyCog"
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
config.workspace = true
dotenvy.workspace = true
toml.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
tokio-test.workspace = true
claims.workspace = true
tempfile.workspace = true
serde_json.workspace = true
tokio.workspace = true