[package]
name = "rustycog-events"
version.workspace = true
edition.workspace = true
description = "Event publishing and subscription for RustyCog"
license.workspace = true
readme.workspace = true

[dependencies]
rustycog-core = { version = "0.1.0", path = "../rustycog-core" }
rustycog-config = { version = "0.1.0", path = "../rustycog-config" }
rdkafka.workspace = true
aws-sdk-sqs.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
rustls.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
futures.workspace = true

[features]
default = []
test-utils = [] 