[package]
name = "rustycog-http"
version.workspace = true
edition.workspace = true
description = "HTTP server utilities for RustyCog"
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
rustycog-core = { version = "0.1.0", path = "../rustycog-core" }
rustycog-command = { version = "0.1.0", path = "../rustycog-command" }
rustycog-config = { version = "0.1.0", path = "../rustycog-config" }
rustycog-permission = { version = "0.1.0", path = "../rustycog-permission" }
axum.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["catch-panic", "propagate-header"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
validator.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true

anyhow.workspace = true
axum-server.workspace = true
axum-valid.workspace = true
tokio = { workspace = true, features = ["net"] }
reqwest.workspace = true