[package]
name = "rustycog-permission"
version.workspace = true
edition.workspace = true
description = "Permission checker client for RustyCog microservices (OpenFGA-backed)"
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
rustycog-core = { version = "0.1.0", path = "../rustycog-core" }
rustycog-config = { version = "0.1.0", path = "../rustycog-config" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
moka.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-test.workspace = true
