[package]
name = "rustycog-testing"
version.workspace = true
edition.workspace = true
description = "Testing utilities for RustyCog"
license.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
rustycog-core = { version = "0.1.0", path = "../rustycog-core" }
rustycog-http = { version = "0.1.0", path = "../rustycog-http" }
rustycog-db = { version = "0.1.0", path = "../rustycog-db" }
rustycog-config = { version = "0.1.0", path = "../rustycog-config" }
rustycog-events = { version = "0.1.0", path = "../rustycog-events" }
rustycog-logger = { version = "0.1.0", path = "../rustycog-logger" }
rustycog-permission = { version = "0.1.0", path = "../rustycog-permission" }
testcontainers.workspace = true
testcontainers-modules.workspace = true
axum-test.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
chrono.workspace = true
sea-orm.workspace = true
uuid.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
wiremock.workspace = true
reqwest.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-sqs.workspace = true
rdkafka.workspace = true
base64.workspace = true
jsonwebtoken.workspace = true
ctrlc.workspace = true
libc.workspace = true
url.workspace = true
