[package]
name = "rustycog-testing"
version = "0.1.0"
edition = "2021"
description = "Testing utilities for RustyCog"
license = "MIT OR Apache-2.0"
readme = "../README.md"
authors = ["Djoe Denne <djoe.denne@gmail.com>"]
repository = "https://github.com/Djoe-Denne/rustycog"
homepage = "https://github.com/Djoe-Denne/rustycog"
documentation = "https://github.com/Djoe-Denne/rustycog#readme"
keywords = ["rustycog", "microservices", "sdk", "ddd", "hexagonal"]
categories = ["development-tools", "asynchronous"]
rust-version = "1.84"

[dependencies]
rustycog = { package = "rustycog-framework", version = "0.1.0", path = "..", features = ["full", "test-utils"] }
testcontainers = "0.24"
testcontainers-modules = "0.12"
axum-test = "17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
async-trait = "0.1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
wiremock = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-sqs = "1"
rdkafka = "0.37"
base64 = "0.22"
jsonwebtoken = "9"
ctrlc = "3.4"
libc = "0.2"
url = "2.5"
